# manim-physics

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  example.py  pyproject.toml
.github/: manimdependency.json
.github/workflows/: ci.yml
docs/: rtd-requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  quickstart.rst  reference.rst
docs/source/_static/: custom.css  responsiveSvg.js
docs/source/reference/: src.manim_physics.electromagnetism.BarMagnet.rst  src.manim_physics.electromagnetism.Charge.rst  src.manim_physics.electromagnetism.Current.rst  src.manim_physics.electromagnetism.ElectricField.rst  src.manim_physics.electromagnetism.MagneticField.rst  src.manim_physics.electromagnetism.rst  src.manim_physics.pendulum.MultiPendulum.rst  src.manim_physics.pendulum.Pendulum.rst  src.manim_physics.pendulum.rst  src.manim_physics.ray.Lens.rst  src.manim_physics.ray.Ray.rst  src.manim_physics.ray.rst  src.manim_physics.rigid_mechanics.Space.rst  src.manim_physics.rigid_mechanics.SpaceScene.rst  src.manim_physics.rigid_mechanics.rst  src.manim_physics.wave.LinearWave.rst  src.manim_physics.wave.RadialWave.rst  src.manim_physics.wave.StandingWave.rst  src.manim_physics.wave.rst
docs/source/reference_index/: electromagnetism.rst  optics.rst  rigid_mechanics.rst  wave.rst
manim_physics/: __init__.py  lensing.py  pendulum.py  rigid_mechanics.py  wave.py
manim_physics/electromagnetism/: electrostatics.py  magnetostatics.py
manim_physics/optics/: __init__.py  lenses.py  rays.py
manim_physics/rigid_mechanics/: pendulum.py  rigid_mechanics.py
src/manim_physics/: __init__.py  electromagnetism.py  lensing.py  pendulum.py  physics.py  ray.py  rigid_mechanics.py  wave.py  wave_physics.py
tests/: conftest.py  test_electromagnetism.py  test_lensing.py  test_manim_physics.py  test_pendulum.py  test_rigid_mechanics.py  test_wave.py
tests/control_data/electromagnetism/: electric_field.npz  magnetic_field.npz  magnetic_field_multiple_wires.npz
tests/control_data/optics/: rays_lens.npz
tests/control_data/pendulum/: multipendulum.npz  pendulum.npz
tests/control_data/rigid_mechanics/: rigid_mechanics.npz
tests/control_data/waves/: linearwave.npz  radialwave.npz  standingwave.npz
