[tool.poetry]
name = "manim-physics"
version = "0.2.4"
description = "Support physics simulation"
authors = ["Matheart <waautomationwong@gmail.com>"]
repository = "https://github.com/Matheart/manim-physics"
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
manim = "^0.17.3"
pymunk = "^6.0.0"
Shapely = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_physics" = "manim_physics"
