[tool.poetry]
name = "manim-physics"
version = "0.3.0"
description = "Support physics simulation"
authors = ["Matheart <waautomationwong@gmail.com>"]
repository = "https://github.com/Matheart/manim-physics"
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
manim = "^0.17.3,<0.19.0"
pymunk = "^6.0.0"
Shapely = "^1.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pre-commit = "^3.3.2"
furo = "^2022.06.21"
sphinx = "^4"
sphinx-copybutton = "^0.4.0"
sphinxcontrib-programoutput = "^0.17"
myst-parser = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_physics" = "manim_physics"
