[tool.poetry]
name = "manim-physics"
version = "0.3.0"
description = "Support physics simulation"
authors = ["Matheart <waautomationwong@gmail.com>"]
repository = "https://github.com/Matheart/manim-physics"
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
manim = "~0.18.0"
pymunk = "^6.6.0"
shapely = "^2.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = ">=23.11,<25.0"
pre-commit = "^3.5.0"
furo = "^2023.09.10"
Sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-programoutput = "^0.17"
myst-parser = "^2.0.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_physics" = "manim_physics"
